fixed off-center inputs on mobile

--- a/styles.css
+++ b/styles.css
@@ -63,11 +63,13 @@ textarea {
 	font-size: 16px;
 }
 
-input[type=text], textarea {
+input[type=text],
+textarea {
 	display: inline-block;
 }
 
-a:hover, a:focus {
+a:hover,
+a:focus {
 	text-decoration: underline;
 }
 
@@ -81,7 +83,7 @@ a:hover, a:focus {
 	// border: 1px solid red;
 }
 
-.filter-message{
+.filter-message {
 	display: block;
 	margin-bottom: 2rem;
 }
@@ -114,7 +116,8 @@ a:hover, a:focus {
 	background: var(--bookmark);
 }
 
-.bookmark:hover, .bookmark:focus {
+.bookmark:hover,
+.bookmark:focus {
 	background: var(--bookmark);
 }
 
@@ -164,7 +167,7 @@ a:hover, a:focus {
 }
 
 .bookmark-title-expanded {
-text-transform: uppercase;
+	text-transform: uppercase;
 }
 
 .delete-bookmark {
@@ -218,7 +221,6 @@ text-transform: uppercase;
 
 .ratinglabel:checked {
 	background: var(--info-full);
-
 }
 
 .delete-bookmark {
@@ -229,7 +231,8 @@ text-transform: uppercase;
 	padding: .4rem .8rem;
 }
 
-.delete-bookmark:hover, .delete-bookmark:focus {
+.delete-bookmark:hover,
+.delete-bookmark:focus {
 	background-color: var(--error);
 	color: var(--delete);
 }
@@ -243,7 +246,8 @@ text-transform: uppercase;
 	background: #fff;
 }
 
-.return-button:hover, .return-button:focus {
+.return-button:hover,
+.return-button:focus {
 	background: var(--info-full);
 }
 
@@ -253,7 +257,8 @@ text-transform: uppercase;
 	transition: background .2s;
 }
 
-.add-new-button:hover, .add-new-button:focus {
+.add-new-button:hover,
+.add-new-button:focus {
 	background-color: var(--submit-full);
 }
 
@@ -264,7 +269,12 @@ text-transform: uppercase;
 	transition: background .2s;
 }
 
-#filter-dropdown:hover, #filter-dropdown:focus {
+#filter-dropdown option {
+	text-align: center;
+}
+
+#filter-dropdown:hover,
+#filter-dropdown:focus {
 	background: var(--info-full);
 }
 
@@ -309,12 +319,16 @@ select {
 	font-size: 16px;
 	border: none;
 	font-weight: 500;
-	padding:0;
-	margin: 0 -.4rem 0 0;
+	padding: 0;
+	margin: 0 -.5rem 0 0;
 }
 
 .rating-input-form {
 	margin-bottom: .1rem;
+}
+
+.rating-input-label {
+	font-weight: 500;
 }
 
 #new-bookmark-title,
@@ -364,14 +378,15 @@ select {
 	transition: background-color .2s;
 }
 
-.add-new-bookmark-button:hover, .add-new-bookmark-button:focus {
+.add-new-bookmark-button:hover,
+.add-new-bookmark-button:focus {
 	background: var(--submit-full);
 }
 
 .add-new-bookmark-button::after {
 	content: " ";
 	box-shadow: 5px 5px 5px 2px rgba(0, 0, 0, 0.5);
-  opacity: 0; /* hide the hover shadow */
+	opacity: 0; /* hide the hover shadow */
 	transition: all 0.3s ease-in-out;
 }
 
@@ -410,12 +425,12 @@ option:checked {
 }
 
 .checkbox-container {
-	display:flex;
-	flex-direction:row;
+	display: flex;
+	flex-direction: row;
 }
 
 .checkbox-container input {
-	display:none;
+	display: none;
 }
 
 // .ratinglabel {
@@ -451,6 +466,26 @@ option:checked {
 		padding: 2rem 1.2rem 2rem;
 	}
 
+	#new-bookmark-title,
+	#new-bookmark-url {
+		// margin: 0 2rem 2rem auto;
+		position: relative;
+		top: 1rem;
+		left: 50%;
+		transform: translate(-50%, -50%);
+	}
+
+	textarea {
+		position: relative;
+		top: 3.5rem;
+		left: 50%;
+		transform: translate(-50%, -50%);
+	}
+
+	.new-bookmark-label {
+		position: relative;
+	}
+
 	h1 {
 		font-size: 34px;
 		margin-bottom: -.5rem;
@@ -483,12 +518,19 @@ option:checked {
 
 	.rating-input {
 		font-size: 14px;
+		margin: 0;
 	}
 
+	.filtertop {
+		width: 100%;
+		text-align: center;
+		margin: 0 auto;
+		position: absolute;
+		left: 50%;
+	}
 }
 
 @media (min-width: 400px) and (max-width: 480px) {
-
 	h1 {
 		font-size: 40px;
 	}
@@ -500,7 +542,8 @@ option:checked {
 		margin-bottom: 0;
 	}
 
-	.add-new-button, #filter-dropdown {
+	.add-new-button,
+	#filter-dropdown {
 		padding: .8rem 1.6rem;
 		position: relative;
 		margin: .5rem auto .8rem;
@@ -512,7 +555,6 @@ option:checked {
 }
 
 @media (max-width: 540px) {
-
 	.initial-view-buttons {
 		margin: 0 auto 1rem;
 		display: block;
@@ -520,7 +562,8 @@ option:checked {
 		padding: 1rem;
 	}
 
-	.add-new-button, #filter-dropdown {
+	.add-new-button,
+	#filter-dropdown {
 		padding: .8rem 1.6rem;
 		position: relative;
 		margin: .8rem auto;
@@ -561,11 +604,11 @@ option:checked {
 	.expanded {
 		height: 160px;
 	}
-
 }
 
 @media (min-width: 540px) and (max-width: 590px) {
-	.add-new-button, #filter-dropdown {
+	.add-new-button,
+	#filter-dropdown {
 		padding: .6rem 1.2rem;
 		margin-bottom: 0;
 	}
@@ -580,10 +623,10 @@ option:checked {
 	}
 }
 
-@media screen and (-webkit-min-device-pixel-ratio:0) { 
-  select,
-  textarea,
-  input {
-    font-size: 16px;
-  }
+@media screen and (-webkit-min-device-pixel-ratio: 0) {
+	select,
+	textarea,
+	input {
+		font-size: 16px;
+	}
 }
